# relay

./: .gitignore  CONTRIBUTUNG.md  Makefile  README.md  compose.yaml  docker-compose.yaml  go.mod  go.sum
.github/workflows/: ci.yaml  release.yaml
api/: openapi.yaml
cmd/api/: main.go
cmd/relay/: all.go  apikey.go  cli.go  colors.go  debug.go  docker.go  logs.go  main.go  openapi.go  openapi.yaml  serve.go  start.go  worker.go
cmd/worker/: main.go
deploy/docker/: Dockerfile  Dockerfile.api  (+1 more)
docs/: BENCHMARKS.md  api.md  architecture.md  configuration.md  deployment.md  features.md  verification.md
e2e/: advanced_features_test.go  webhook_delivery_test.go
migrations/: 000001_init.down.sql  000001_init.up.sql  000002_outbox.down.sql  000002_outbox.up.sql  000003_api_keys.down.sql  000003_api_keys.up.sql  000004_endpoints.down.sql  000004_endpoints.up.sql  000005_endpoint_secrets.down.sql  000005_endpoint_secrets.up.sql  000006_event_types.down.sql  000006_event_types.up.sql  000007_endpoint_filters.down.sql  000007_endpoint_filters.up.sql  000008_endpoint_transformations.down.sql  000008_endpoint_transformations.up.sql  000009_endpoint_fifo.down.sql  000009_endpoint_fifo.up.sql  000010_event_priority.down.sql  000010_event_priority.up.sql  000011_event_scheduled.down.sql  000011_event_scheduled.up.sql  000012_connectors.down.sql  000012_connectors.up.sql  000013_alerting_rules.down.sql  000013_alerting_rules.up.sql  embed.go
sdk/python/: README.md  pyproject.toml  pyrightconfig.json
sdk/python/src/relay_sdk/: __init__.py  client.py  errors.py  signature.py  types.py
sdk/python/tests/: __init__.py  test_client.py  test_signature.py
(+194 files in other folders)
