[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-sdk"
version = "1.0.0"
description = "Python SDK for Relay webhook delivery service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Relay Team" }
]
keywords = ["relay", "webhook", "webhooks", "sdk", "api", "delivery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/stiffinWanjohi/relay"
Documentation = "https://github.com/stiffinWanjohi/relay/tree/main/sdk/python"
Repository = "https://github.com/stiffinWanjohi/relay.git"

[tool.hatch.build.targets.wheel]
packages = ["src/relay_sdk"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
